# rnapipey

./: .gitignore  README.md  install_tools.sh  pixi.toml  pyproject.toml
.claude/: SKILL.md
.claude/skills/rnapipey/: SKILL.md
configs/: default.yaml  local.yaml
examples/: trna.fasta
rnapipe/: __init__.py  cli.py  config.py  pipeline.py  report.py  utils.py
rnapipe/tools/: base.py  infernal.py  protenix.py  rhofold.py  rnadvisor.py  simrna.py  spotrna.py  viennarna.py
rnapipey/: __init__.py  cli.py  config.py  ensemble.py  pipeline.py  report.py  utils.py
rnapipey/scripts/: batch_rhofold.py
rnapipey/tools/: __init__.py  base.py  batch_rhofold.py  infernal.py  protenix.py  rhofold.py  rnadvisor.py  simrna.py  spotrna.py  viennarna.py
